# gestore-energia

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
env/: general.env  price_coeff.env  user.env
prompts/: data_requests.txt  dati_gas.txt  dati_luce.txt
src/: config.py  extractor.py  main.py  model.py  price.py
src/data_extractor/: extractor.py
src/excel_writer/: excel_writer.py
src/prezzo/: abc.py  prezzo_gas.py  prezzo_luce.py
tests/: conftest.py  test_prezzo_gas.py
